--- a/src/app/features/landing/landing.component.scss
+++ b/src/app/features/landing/landing.component.scss
@@ -6,12 +6,6 @@
   z-index: 1;
 }
 
-/* Allow footer to break out of container */
-.landing ft-footer {
-  position: relative;
-  z-index: 10;
-}
-
 /* Sections - content-driven height */
 .section-full {
   padding: 100px 24px;
